--- a/public/event/8_faq/index.html
+++ b/public/event/8_faq/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Get in touch</title>
+<title>Attendance FAQ</title>
 <meta name="description" content="Describe your website">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -28,9 +28,6 @@
 
 <link href="/css/custom.css" rel="stylesheet">
 <link rel="shortcut icon" href="/img/favicon.png">
-
-  <link href="/contact/index.xml" rel="alternate" type="application/rss+xml" title="Global Women in Data Science Conference" />
-  <link href="/contact/index.xml" rel="feed" type="application/rss+xml" title="Global Women in Data Science Conference" />
 
 
 </head>
@@ -97,30 +94,28 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Get in touch</h1>
-         <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
+         <h1>Attendance FAQ</h1>
+         
 
-<p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
+<h2 id="are-men-allowed-to-participate-in-wids">Are men allowed to participate in WiDS?</h2>
 
-<p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh.</p>
+<p>YES. Men are not only allowed, but encouraged, to attend any WiDS events worldwide. In addition, several of our WiDS ambassadors are men. WiDS is WiDS because we feature outstanding women doing outstanding work.</p>
 
-         <h4>You can find me also on:</h4>
-         <p class="social social--big">
-  
-  
-  
-  
-  
-  <a href="mailto:datascience@csuchico.edu" class="email">
-    <i class="fa fa-envelope"></i>
-  </a>
-  
-  
-  
-  
-  
-  
-</p>
+<h2 id="do-i-have-to-register-for-the-whole-day">Do I have to register for the whole day?</h2>
+
+<p>No. You are welcome to come in and out as your schedule allows. Check the schedule for times and speaker bios</p>
+
+<h2 id="what-is-a-wids-ambassador">What is a WiDS Ambassador?</h2>
+
+<p>WiDS Ambassadors bring the Women in Data Science (WiDS) Conference to their cohort, colleagues, and community by hosting regional events that incorporate the live-stream or video sessions of the WiDS Stanford event, and/or feature other female speakers in the field of data science.</p>
+
+<h2 id="will-video-sessions-be-available-post-event">Will video sessions be available, post-event?</h2>
+
+<p>Yes. Each of the WiDS sessions will be videotaped, edited, and posted to YouTube. The conference livestream will be uploaded to the WiDS website immediately after the conference, unabridged. Edited video sessions will be available 2 days later. Today, you can view the playlist from WiDS Stanford 2018.</p>
+
+<h2 id="how-can-i-participate">How can I participate?</h2>
+
+<p>There are multiple ways to participate in the WiDS conference. You can attend WiDS Stanford, one of the regional events being planned worldwide, or join us online via livestream or Facebook Live. You can also participate in the WiDS Datathon, or listen and subscribe to the WiDS podcast.</p>
 
          
       </div>
