--- a/public/event/4_girls_inc/index.html
+++ b/public/event/4_girls_inc/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Get in touch</title>
+<title>Inspiring all girls to be strong, smart, and bold</title>
 <meta name="description" content="Describe your website">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -28,9 +28,6 @@
 
 <link href="/css/custom.css" rel="stylesheet">
 <link rel="shortcut icon" href="/img/favicon.png">
-
-  <link href="/contact/index.xml" rel="alternate" type="application/rss+xml" title="Global Women in Data Science Conference" />
-  <link href="/contact/index.xml" rel="feed" type="application/rss+xml" title="Global Women in Data Science Conference" />
 
 
 </head>
@@ -97,30 +94,12 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Get in touch</h1>
-         <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
+         <h1>Inspiring all girls to be strong, smart, and bold</h1>
+         <p>Girls Inc. of the Northern Sacramento Valley, founded in 2006, is an affiliate of Girls Incorporated, which serves girls across the United States and Canada. With roots dating back to 1864, Girls Incorporated is the oldest girl-focused organization in the United States.</p>
 
-<p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
+<p>Girls Inc. of the Northern Sacramento Valley is all about empowering local girls. We serve Shasta and Tehama county girls, ages 6 to 18, by offering a wide range of in-school, after-school and extracurricular programs. These research-based programs build girls’ self-esteem, transform their views of themselves, and help them recognize their potential as leaders, friends, innovators and independent thinkers. Girls Inc.’s mission is to inspire girls to be “strong, smart and bold.”</p>
 
-<p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh.</p>
-
-         <h4>You can find me also on:</h4>
-         <p class="social social--big">
-  
-  
-  
-  
-  
-  <a href="mailto:datascience@csuchico.edu" class="email">
-    <i class="fa fa-envelope"></i>
-  </a>
-  
-  
-  
-  
-  
-  
-</p>
+<p><a href="http://www.girlsincnsv.org/">http://www.girlsincnsv.org/</a></p>
 
          
       </div>
