--- a/public/event/5_location/index.html
+++ b/public/event/5_location/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Get in touch</title>
+<title>Live streaming from Chico State Campus</title>
 <meta name="description" content="Describe your website">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -28,9 +28,6 @@
 
 <link href="/css/custom.css" rel="stylesheet">
 <link rel="shortcut icon" href="/img/favicon.png">
-
-  <link href="/contact/index.xml" rel="alternate" type="application/rss+xml" title="Global Women in Data Science Conference" />
-  <link href="/contact/index.xml" rel="feed" type="application/rss+xml" title="Global Women in Data Science Conference" />
 
 
 </head>
@@ -97,30 +94,10 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Get in touch</h1>
-         <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
+         <h1>Live streaming from Chico State Campus</h1>
+         <p>Sylvesters Cafe, Room 100.</p>
 
-<p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
-
-<p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh.</p>
-
-         <h4>You can find me also on:</h4>
-         <p class="social social--big">
-  
-  
-  
-  
-  
-  <a href="mailto:datascience@csuchico.edu" class="email">
-    <i class="fa fa-envelope"></i>
-  </a>
-  
-  
-  
-  
-  
-  
-</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1084.8528825453786!2d-121.84514624627668!3d39.73005107869669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808327a4d40ea4c7%3A0xe6abf565f265edc2!2sSelvester&#39;s+Cafe!5e0!3m2!1sen!2sus!4v1549516698649" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
          
       </div>
