add panel pic and schedule entry

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -96,7 +96,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>NorCal WiDS | About</h1>
-         <p><img src="/img/wids-logo.jpg" alt="" /></p>
+         <p><img src="/img/wids-logo.png" alt="" /></p>
 
 <p>stuff</p>
 
