--- a/public/event/2_schedule/index.html
+++ b/public/event/2_schedule/index.html
@@ -195,8 +195,8 @@
   </tr>
   <tr>
     <td class="tg-time">3:30 - 4:10</td>
-    <td class="tg-item">Career Panel</td>
-    <td class="tg-0pky"></td>
+    <td class="tg-item">Local WiDS Symposium</td>
+    <td class="tg-0pky">Submit your abstract to share your journy, path, research, current job highlights or recruitment opportunities. </td>
   </tr>
   <tr>
     <td class="tg-time">4:10 - 4:30</td>
