--- a/public/event/6_panel/index.html
+++ b/public/event/6_panel/index.html
@@ -95,6 +95,10 @@
          <h1>Lunchtime career panel</h1>
          <p>Meet and hear from local women in Data Science and Technology.</p>
 
+<p>Watch a recording of the panel from 2018:</p>
+
+<p><a href="https://www.youtube.com/watch?time_continue=1&amp;v=mTpJnDAAaew">https://www.youtube.com/watch?time_continue=1&amp;v=mTpJnDAAaew</a></p>
+
          
       </div>
     </div>
