--- a/public/event/6_panel/index.html
+++ b/public/event/6_panel/index.html
@@ -93,7 +93,56 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Lunchtime career panel</h1>
-         <p>Meet and hear from local women in Data Science and Technology.</p>
+         
+
+<p>Meet and hear from local women in Data Science and Technology.</p>
+
+<h1 id="charlette-diagneault">Charlette Diagneault</h1>
+
+<h1 id="gloria-kimbwala">Gloria Kimbwala</h1>
+
+<p><img src="../img/2019panel/Kimbwala.jpg" alt="Gloria Kimbwala " class="center"></p>
+
+<p>Gloria Kimbwala is CEO and founder of Shule, a startup that tokenizes international experiential
+learning systems in decentralized education. Previously to venturing out on her own, she was
+Square’s University Tech Evangelist where she focused on helping connect people to the tools,
+programs, and support they need to enter the technology industry. This includes leading
+programs such as Square’s Code Camps, an immersion program that support college women
+pursuing careers in technology. She is passionate about making the blockchain ecosystem an
+inclusive and diverse space for all, including diversity of age, sexual orientation, ability, race,
+gender, and life experiences. Her hope is that all people will be encouraged to BUIDL solutions
+that benefit their communities. She was recently named one of the Top Ten Women in Fintech
+by Fintech Ranking. Her non-traditional path into technology includes a bachelor&rsquo;s degree in
+Environmental Studies and a Master&rsquo;s degree in Computer Science. In her spare time, you can
+find her coding with her sons.</p>
+
+<h1 id="melody-stapleton-phd">Melody Stapleton, PhD</h1>
+
+<p><img src="../img/2019panel/stapleton.jpg" alt="Melody Stapleton" class="center"></p>
+
+<p>Dean, College of Engineering, Computer Science, and Construction Management</p>
+
+<p>Melody Stapleton has served as dean for the College of ECC since fall 2018, after holding the associate dean role, where she spearheaded a college-wide laboratory spaces upgrade initiative.</p>
+
+<p>Previously, she served as department chair for computer science from fall 2012 to spring 2017. With her leadership the department was rebuilt, to reflect the proud heritage of being the first computer science department in the CSU. Initiatives included reinvigorating the Computer Science Industry Advisory Board, adding 30 new high-level CEOs, stewarding a full six-year Accreditation Board for Engineering and Technology (ABET) accreditation, and tripling the number of tenure-track faculty in the department.</p>
+
+<p>She joined the faculty at Chico State in 1981 after receiving her PhD in Mathematics from UC, Riverside.  Her area of specialization is Database Management Systems, focusing on Performance Tuning.  She has consulting and industrial experience for many California State Agencies (Air Resources, Toxic Substances Control), Counties (Butte and Mendocino) and cities, developing Information Systems Master Plans and Software Systems, as well as consulting for the Naval Weapons Center at China Lake (NAVAIR).  Recently, she has served as an expert witness dealing with both patent infringement cases and criminal cases involving Internet fraud while working for the US Attorney General.</p>
+
+<p>She is passionate about facilitating the growth of junior faculty and building interdisciplinary partnerships between departments, colleges, and industry.</p>
+
+<h1 id="wendy-porter">Wendy Porter</h1>
+
+<p><img src="../img/2019panel/Porter.jpg" alt="Wendy Porter" class="center"></p>
+
+<p>Wendy is the Managing Director of Chicostart and facilitator of growTECH our Northern CA tech industry partnership. She is also the CA Community Colleges Information Communications Technology Deputy Sector Navigator for the Far North CA region. Chicostart is a startup incubator located in Chico, CA. Chicostart has launched 14 startups in the past 4 years and created over 105 quality jobs while nurturing a cohesive platform of connectivity for tech businesses, Chico State, Butte College, investors, mentors, workforce, and economic development groups to interact and uplift the problem solvers and difference makers of tomorrow. Fostering the tech startup entrepreneurial ecosystem in Chico and Northern CA is a passion for Wendy and seeing the positive results is invigorating.</p>
+
+<p>After graduating from CSUC she launched her career in Silicon Valley at Hewlett-Packard. Her successes at HP centered around managing releases and putting together programs and processes for the Software Development Life-cycle. Building a web development business, and Implementing Change Management / Release to Production programs for HP IT departments were highlights in her career.</p>
+
+<p>Wendy moved back to Chico to raise a family and become an executive contributor at Shasta QA where she successfully brought many Silicon Valley companies on as clients for the rural-based tech company. With two young girls at home Wendy then pivoted into the entrepreneurial space and found a home at Chicostart.</p>
+
+<hr />
+
+<h2 id="2018-event">2018 Event</h2>
 
 <p>Watch a recording of the panel from 2018:</p>
 
