--- a/public/event/index.html
+++ b/public/event/index.html
@@ -236,8 +236,7 @@ Girls Inc. of the Northern Sacramento Valley is all about empowering local girls
                             <p>
                                 
                                   Meet and hear from local women in Data Science and Technology.
-Watch a recording of the panel from 2018:
-https://www.youtube.com/watch?time_continue=1&amp;v=mTpJnDAAaew
+Charlette Diagneault Gloria Kimbwala Gloria Kimbwala is CEO and founder of Shule, a startup that tokenizes international experiential learning systems in decentralized education. Previously to venturing out on her own, she was Square’s University Tech Evangelist where she focused on helping connect people to the tools, programs, and support they need to enter the technology industry. This includes leading programs such as Square’s Code Camps, an immersion program that support college women pursuing careers in technology.
                                 
                             </p>
                           </div>
