--- a/public/event/6_panel/index.html
+++ b/public/event/6_panel/index.html
@@ -107,10 +107,10 @@
 
 <p>Bio forthcoming</p>
 
-<h2 id="gloria-kimbwala">Gloria Kimbwala</h2>
+<h2 id="gloria-kimbwala-ms">Gloria Kimbwala, MS</h2>
 
 <p align="center">
-  <img src="../img/Kimbwala.jpg">
+  <img src="../../img/2019panel/Kimbwala.jpg" style="width: 30%; height: 30%">
 </p>
 
 <p>Gloria Kimbwala is CEO and founder of Shule, a startup that tokenizes international experiential
@@ -120,7 +120,7 @@ programs, and support they need to enter the technology industry. This includes 
 programs such as Square’s Code Camps, an immersion program that support college women
 pursuing careers in technology. She is passionate about making the blockchain ecosystem an
 inclusive and diverse space for all, including diversity of age, sexual orientation, ability, race,
-gender, and life experiences. Her hope is that all people will be encouraged to BUIDL solutions
+gender, and life experiences. Her hope is that all people will be encouraged to BUILD solutions
 that benefit their communities. She was recently named one of the Top Ten Women in Fintech
 by Fintech Ranking. Her non-traditional path into technology includes a bachelor&rsquo;s degree in
 Environmental Studies and a Master&rsquo;s degree in Computer Science. In her spare time, you can
@@ -129,7 +129,7 @@ find her coding with her sons.</p>
 <h2 id="melody-stapleton-phd">Melody Stapleton, PhD</h2>
 
 <p align="center">
-  <img src="../img/2019panel/stapleton.jpg">
+  <img src="../../img/2019panel/stapleton.jpg">
 </p>
 
 <p>Dean, College of Engineering, Computer Science, and Construction Management</p>
@@ -145,7 +145,7 @@ find her coding with her sons.</p>
 <h2 id="wendy-porter">Wendy Porter</h2>
 
 <p align="center">
-  <img src="../img/2019panel/Porter.jpg">
+  <img src="../../img/2019panel/Porter.jpeg">
 </p>
 
 <p>Wendy is the Managing Director of Chicostart and facilitator of growTECH our Northern CA tech industry partnership. She is also the CA Community Colleges Information Communications Technology Deputy Sector Navigator for the Far North CA region. Chicostart is a startup incubator located in Chico, CA. Chicostart has launched 14 startups in the past 4 years and created over 105 quality jobs while nurturing a cohesive platform of connectivity for tech businesses, Chico State, Butte College, investors, mentors, workforce, and economic development groups to interact and uplift the problem solvers and difference makers of tomorrow. Fostering the tech startup entrepreneurial ecosystem in Chico and Northern CA is a passion for Wendy and seeing the positive results is invigorating.</p>
