--- a/public/event/6_panel/index.html
+++ b/public/event/6_panel/index.html
@@ -105,7 +105,11 @@
 
 <h2 id="charlette-diagneault">Charlette Diagneault</h2>
 
-<p>Bio forthcoming</p>
+<p align="center">
+  <img src="../../img/2019panel/diagneault.jpg" style="width: 30%; height: 30%">
+</p>
+
+<p>Charlette Daigneault serves as the director of program expansion for the BlueTechValley hub in Chico, California. Passionate about entrepreneurship and innovation, she has worked for three startups and for Cal Poly&rsquo;s Center for Entrepreneurship.  She is also an organizational communication major with a formal minor in psychology at California State University, Chico.</p>
 
 <h2 id="gloria-kimbwala-ms">Gloria Kimbwala, MS</h2>
 
